<resources>
    <string name="app_name">Flerbi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_people_and_cities">Search people and cities.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create account.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="create_account_register">Create account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="accept_terms_of_use">Accept terms of use</string>
    <string name="log_in">Log In</string>
    <string name="remind_password">Remind Password</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="search">Search</string>
    <string name="active_users">Active users:</string>
    <string name="last_location">Last location:</string>
    <string name="favorite_location">Favorite location:</string>
    <string name="general">General</string>
    <string name="type_location">Type location...</string>
    <string name="yours">Yours</string>
    <string name="points">   Points</string>
    <string name="all_of_above_stats_you_can_achieve_by_conversation">All of above stats you can achieve by conversation.</string>
    <string name="empty">Empty</string>
    <string name="type_message">Type message...</string>
    <string name="searching_in">Searching in:</string>
    <string name="cancel">Cancel</string>
    <string name="your_tags">Your Tags</string>
    <string name="your_interlocutor_will_see_these_tags">Your interlocutor will see these tags.</string>
    <string name="currently_assigned">Currently assigned</string>
    <string name="user_tags">User Tags</string>
    <string name="assign_tags">Assign tags</string>
    <string name="you_don_t_have_tags_assigned">You don\'t have tags assigned.</string>
    <string name="select_tags">Select Tags</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile settings</string>
    <string name="achievements_soon">Achievements (soon)</string>
    <string name="prizes_soon">Prizes (soon)</string>
    <string name="logout">Logout</string>
    <string name="dark_theme">Dark theme</string>
    <string name="sport">Sport</string>
    <string name="games">Games</string>
    <string name="movies">Movies</string>
    <string name="technology">Technology</string>
    <string name="photography">Photography</string>
    <string name="make_up">Make-up</string>
    <string name="music">Music</string>
    <string name="socials">Socials</string>
    <string name="automotive">Automotive</string>
    <string name="art">Art</string>
    <string name="astronomy">Astronomy</string>
    <string name="it">IT</string>
    <string name="science">Science</string>
    <string name="fashion">Fashion</string>
    <string name="dance">Dance</string>
    <string name="location_settings">Location settings</string>
    <string name="change_your_settings">Change your settings.</string>
    <string name="type_favorite_location">Type favorite location.</string>
    <string name="save">Save</string>
    <string name="automatically_type_favorite_location_to_location_field">Automatically type favorite location to location field.</string>
    <string name="the_favorite_location_appears_on_the_main_screen_and_can_be_used_to_automatically_enter_it_into_the_location_field">The favorite location appears on the main screen and can be used to automatically enter it into the location field.</string>
    <string name="tags">Tags</string>
    <string name="recommend">Recommend</string>
    <string name="report_user">Report User</string>
    <string name="end">End</string>
    <string name="user_has_not_assigned_tags">User has not assigned tags.</string>
    <string name="turn_on_dark_theme">Turn on dark theme</string>
    <string name="settings">Settings</string>
    <string name="flerbi">Flerbi</string>
    <string name="images_authors">Images authors</string>
    <string name="external_libraries">External libraries</string>
    <string name="application_information">Application information</string>
    <string name="suggestions">Suggestions</string>
    <string name="delete_account">Delete account</string>
    <string name="username">Username</string>
    <string name="additional_information">Additional information</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="app">App</string>
    <string name="account">Account</string>
    <string name="verify">Verify</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_identity">Confirm identity</string>
    <string name="enter_your_password_to_confirm_your_identity">Enter your password to confirm your identity.</string>
    <string name="are_you_sure_you_want_delete_account">Are you sure you want delete account?</string>
    <string name="this_action_is_irreversible">This action is irreversible!</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long.</string>
    <string name="change_password">Change password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="register">Register</string>
    <string name="contact">Contact</string>
    <string name="source">Source:</string>
    <string name="authors">Authors:</string>
    <string name="avatar">Avatar</string>
    <string name="icons">Icons</string>
</resources>